--- a/CarService.Context/CarServiceContext.csproj
+++ b/CarService.Context/CarServiceContext.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CarService.Context.Contracts\CarService.Context.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
