--- a/CarService.Common.Entity/CarService.Common.Entity.csproj
+++ b/CarService.Common.Entity/CarService.Common.Entity.csproj
@@ -7,9 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="12.0.1" />
-    <PackageReference Include="AutoMapper.Extensions.EnumMapping" Version="3.1.0" />
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="EnumPerevod" Version="1.0.0" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="FluentValidation" Version="6.0.0" />
@@ -24,16 +21,10 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
-    <PackageReference Include="Serilog" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CarService.Context.Contracts\CarService.Context.Contracts.csproj" />
-    <ProjectReference Include="..\CarService.Shared\CarService.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ModelsRequest\" />
+    <ProjectReference Include="..\CarService.Common\CarService.Common.csproj" />
   </ItemGroup>
 
 </Project>
